test/typecheck/pass/exist_true.sail

function unit test () =
{
  (exist 'n. [:'n:]) x := 4;
  (exist 'n, true. [:'n:]) y := 5;
  ()
}
